# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.history/: Cargo_20210315222552.toml
.history/src/: main_20210216193020.rs  startup_20210315221452.rs  startup_20210522190312.rs  telemetry_20210522190605.rs
.history/src/routes/: mod_20210315220311.rs  mod_20210522193503.rs
.history/tests/all/: health_check_20201222232512.rs  helpers_20210315214345.rs  helpers_20210522185914.rs  helpers_20210522190425.rs
configuration/: production.yaml
migrations/: 20210307184428_make_status_not_null_in_subscriptions.sql  20210307185410_create_subscription_tokens_table.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/all/: health_check.rs  helpers.rs  main.rs  subscriptions.rs
