[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Pere Villega <pvillega@aracon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"

[dev-dependencies]
tokio = "0.2.22"
reqwest = "0.10.8"
