[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Pere Villega <pvillega@aracon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "4.0.0-beta.3"
tokio = "0.2.22"
serde = "1.0.115"
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = "0.1.21"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-futures = "0.2.4"
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.1"
tracing-actix-web = "0.3.0-beta.2"
serde-aux = "1.0.1"
unicode-segmentation = "1.7.1"
validator = "0.12.0"
# We need the `json` feature flag to serialize/deserialize JSON payloads
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
lazy_static = "1.4.0"
claim = "0.4.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.4.9"
serde_json = "1.0.61"
# We are not using fake >= 2.4 because it relies on rand 0.8
# which has been recently released and it is not yet used by
# quickcheck (solved in its upcoming 1.0 release!)
fake = "~2.3"
